@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="generator" content="Docutils 0.4: http://docutils.sourceforge.net/" />
+<meta name="generator" content="Docutils 0.5: http://docutils.sourceforge.net/" />
 <title>profile</title>
 <link rel="stylesheet" href="../docutils-api.css" type="text/css" />
 </head>
@@ -51,28 +51,29 @@
 <div class="document" id="profile">
 <h1 class="title">profile</h1>
 <h2 class="subtitle" id="manipulate-embedded-profiles">Manipulate embedded profiles</h2>
-<div class="contents topic">
-<p class="topic-title first"><a id="contents" name="contents">Contents</a></p>
+
+<div class="contents topic" id="contents">
+<p class="topic-title first">Contents</p>
 <ul class="simple">
-<li><a class="reference" href="#allocateimageprofileiterator" id="id13" name="id13">AllocateImageProfileIterator</a></li>
-<li><a class="reference" href="#deallocateimageprofileiterator" id="id14" name="id14">DeallocateImageProfileIterator</a></li>
-<li><a class="reference" href="#deleteimageprofile" id="id15" name="id15">DeleteImageProfile</a></li>
-<li><a class="reference" href="#getimageprofile" id="id16" name="id16">GetImageProfile</a></li>
-<li><a class="reference" href="#nextimageprofile" id="id17" name="id17">NextImageProfile</a></li>
-<li><a class="reference" href="#profileimage" id="id18" name="id18">ProfileImage</a></li>
-<li><a class="reference" href="#setimageprofile" id="id19" name="id19">SetImageProfile</a></li>
+<li><a class="reference internal" href="#allocateimageprofileiterator" id="id13">AllocateImageProfileIterator</a></li>
+<li><a class="reference internal" href="#deallocateimageprofileiterator" id="id14">DeallocateImageProfileIterator</a></li>
+<li><a class="reference internal" href="#deleteimageprofile" id="id15">DeleteImageProfile</a></li>
+<li><a class="reference internal" href="#getimageprofile" id="id16">GetImageProfile</a></li>
+<li><a class="reference internal" href="#nextimageprofile" id="id17">NextImageProfile</a></li>
+<li><a class="reference internal" href="#profileimage" id="id18">ProfileImage</a></li>
+<li><a class="reference internal" href="#setimageprofile" id="id19">SetImageProfile</a></li>
 </ul>
 </div>
-<div class="section">
-<h1><a class="toc-backref" href="#id13" id="allocateimageprofileiterator" name="allocateimageprofileiterator">AllocateImageProfileIterator</a></h1>
-<div class="section">
-<h2><a id="synopsis" name="synopsis">Synopsis</a></h2>
+<div class="section" id="allocateimageprofileiterator">
+<h1><a class="toc-backref" href="#id13">AllocateImageProfileIterator</a></h1>
+<div class="section" id="synopsis">
+<h2>Synopsis</h2>
 <pre class="literal-block">
-ImageProfileIterator AllocateImageProfileIterator( const <a class="reference" href="../api/types.html#image">Image</a> *image );
+ImageProfileIterator AllocateImageProfileIterator( const <a class="reference external" href="../api/types.html#image">Image</a> *image );
 </pre>
 </div>
-<div class="section">
-<h2><a id="description" name="description">Description</a></h2>
+<div class="section" id="description">
+<h2>Description</h2>
 <p>AllocateImageProfileIterator allocates an iterator to traverse the
 image profile list.  It is an error (i.e. will surely crash) to invoke
 DeleteImageProfile() on the profile that the iterator is currently
@@ -81,7 +82,7 @@ is not currently referencing. Inserting additional profiles does not
 invalidate the current iterator.</p>
 <p>The format of the AllocateImageProfileIterator method is:</p>
 <pre class="literal-block">
-ImageProfileIterator AllocateImageProfileIterator( const <a class="reference" href="../api/types.html#image">Image</a> *image );
+ImageProfileIterator AllocateImageProfileIterator( const <a class="reference external" href="../api/types.html#image">Image</a> *image );
 </pre>
 <p>A description of each parameter follows:</p>
 <dl class="docutils">
@@ -90,16 +91,16 @@ ImageProfileIterator AllocateImageProfileIterator( const <a class="reference" hr
 </dl>
 </div>
 </div>
-<div class="section">
-<h1><a class="toc-backref" href="#id14" id="deallocateimageprofileiterator" name="deallocateimageprofileiterator">DeallocateImageProfileIterator</a></h1>
-<div class="section">
-<h2><a id="id1" name="id1">Synopsis</a></h2>
+<div class="section" id="deallocateimageprofileiterator">
+<h1><a class="toc-backref" href="#id14">DeallocateImageProfileIterator</a></h1>
+<div class="section" id="id1">
+<h2>Synopsis</h2>
 <pre class="literal-block">
 void DeallocateImageProfileIterator( ImageProfileIterator profile_iterator );
 </pre>
 </div>
-<div class="section">
-<h2><a id="id2" name="id2">Description</a></h2>
+<div class="section" id="id2">
+<h2>Description</h2>
 <p>DeallocateImageProfileIterator deallocates an image profile iterator.</p>
 <p>The format of the DeallocateImageProfileIterator method is:</p>
 <pre class="literal-block">
@@ -112,20 +113,20 @@ void DeallocateImageProfileIterator( ImageProfileIterator profile_iterator );
 </dl>
 </div>
 </div>
-<div class="section">
-<h1><a class="toc-backref" href="#id15" id="deleteimageprofile" name="deleteimageprofile">DeleteImageProfile</a></h1>
-<div class="section">
-<h2><a id="id3" name="id3">Synopsis</a></h2>
+<div class="section" id="deleteimageprofile">
+<h1><a class="toc-backref" href="#id15">DeleteImageProfile</a></h1>
+<div class="section" id="id3">
+<h2>Synopsis</h2>
 <pre class="literal-block">
-unsigned int DeleteImageProfile( <a class="reference" href="../api/types.html#image">Image</a> *image, const char *name );
+unsigned int DeleteImageProfile( <a class="reference external" href="../api/types.html#image">Image</a> *image, const char *name );
 </pre>
 </div>
-<div class="section">
-<h2><a id="id4" name="id4">Description</a></h2>
+<div class="section" id="id4">
+<h2>Description</h2>
 <p>DeleteImageProfile removes a named profile from the image.</p>
 <p>The format of the DeleteImageProfile method is:</p>
 <pre class="literal-block">
-unsigned int DeleteImageProfile( <a class="reference" href="../api/types.html#image">Image</a> *image, const char *name );
+unsigned int DeleteImageProfile( <a class="reference external" href="../api/types.html#image">Image</a> *image, const char *name );
 </pre>
 <p>A description of each parameter follows:</p>
 <dl class="docutils">
@@ -137,17 +138,17 @@ generic profile name.</dd>
 </dl>
 </div>
 </div>
-<div class="section">
-<h1><a class="toc-backref" href="#id16" id="getimageprofile" name="getimageprofile">GetImageProfile</a></h1>
-<div class="section">
-<h2><a id="id5" name="id5">Synopsis</a></h2>
+<div class="section" id="getimageprofile">
+<h1><a class="toc-backref" href="#id16">GetImageProfile</a></h1>
+<div class="section" id="id5">
+<h2>Synopsis</h2>
 <pre class="literal-block">
-const unsigned char *GetImageProfile( const <a class="reference" href="../api/types.html#image">Image</a> *image, const char *name,
+const unsigned char *GetImageProfile( const <a class="reference external" href="../api/types.html#image">Image</a> *image, const char *name,
                                       size_t *length );
 </pre>
 </div>
-<div class="section">
-<h2><a id="id6" name="id6">Description</a></h2>
+<div class="section" id="id6">
+<h2>Description</h2>
 <p>GetImageProfile returns a pointer to the named image profile if it is
 present. A null pointer is returned if the named profile is not present.</p>
 <p>Older versions of this function stored profiles named &quot;8BIM&quot; and &quot;IPTC&quot;
@@ -156,7 +157,7 @@ GetImageProfile() will try the alternate name if the specifically
 requested profile name is not available.</p>
 <p>The format of the GetImageProfile method is:</p>
 <pre class="literal-block">
-const unsigned char *GetImageProfile( const <a class="reference" href="../api/types.html#image">Image</a> *image, const char *name,
+const unsigned char *GetImageProfile( const <a class="reference external" href="../api/types.html#image">Image</a> *image, const char *name,
                                       size_t *length );
 </pre>
 <dl class="docutils">
@@ -171,17 +172,17 @@ if length is not needed.</dd>
 </dl>
 </div>
 </div>
-<div class="section">
-<h1><a class="toc-backref" href="#id17" id="nextimageprofile" name="nextimageprofile">NextImageProfile</a></h1>
-<div class="section">
-<h2><a id="id7" name="id7">Synopsis</a></h2>
+<div class="section" id="nextimageprofile">
+<h1><a class="toc-backref" href="#id17">NextImageProfile</a></h1>
+<div class="section" id="id7">
+<h2>Synopsis</h2>
 <pre class="literal-block">
 MagickPassFail NextImageProfile( ImageProfileIterator profile_iterator, const char ** name,
                                  const unsigned char ** profile, size_t *length );
 </pre>
 </div>
-<div class="section">
-<h2><a id="id8" name="id8">Description</a></h2>
+<div class="section" id="id8">
+<h2>Description</h2>
 <p>NextImageProfile iterates forward to the next image profile. The profile
 name is returned along with the profile data, and length.  If there are
 no more entries in the list, then MagickFail is returned.</p>
@@ -202,17 +203,17 @@ MagickPassFail NextImageProfile( ImageProfileIterator profile_iterator, const ch
 </dl>
 </div>
 </div>
-<div class="section">
-<h1><a class="toc-backref" href="#id18" id="profileimage" name="profileimage">ProfileImage</a></h1>
-<div class="section">
-<h2><a id="id9" name="id9">Synopsis</a></h2>
+<div class="section" id="profileimage">
+<h1><a class="toc-backref" href="#id18">ProfileImage</a></h1>
+<div class="section" id="id9">
+<h2>Synopsis</h2>
 <pre class="literal-block">
-unsigned int ProfileImage( <a class="reference" href="../api/types.html#image">Image</a> *image, const char *name, unsigned char *profile,
+unsigned int ProfileImage( <a class="reference external" href="../api/types.html#image">Image</a> *image, const char *name, unsigned char *profile,
                            const size_t length, unsigned int clone );
 </pre>
 </div>
-<div class="section">
-<h2><a id="id10" name="id10">Description</a></h2>
+<div class="section" id="id10">
+<h2>Description</h2>
 <p>ProfileImage() adds, applies, or removes a ICM, IPTC, or generic profile
 from an image.  If the profile is NULL, it is removed from the image
 otherwise added (or applied).  Use a name of '*' and a profile of NULL to
@@ -229,7 +230,7 @@ is applied to the image pixels, and the new profile is associated
 with the image.</p>
 <p>The format of the ProfileImage method is:</p>
 <pre class="literal-block">
-unsigned int ProfileImage( <a class="reference" href="../api/types.html#image">Image</a> *image, const char *name, unsigned char *profile,
+unsigned int ProfileImage( <a class="reference external" href="../api/types.html#image">Image</a> *image, const char *name, unsigned char *profile,
                            const size_t length, unsigned int clone );
 </pre>
 <dl class="docutils">
@@ -248,17 +249,17 @@ ownership of it.</dd>
 </dl>
 </div>
 </div>
-<div class="section">
-<h1><a class="toc-backref" href="#id19" id="setimageprofile" name="setimageprofile">SetImageProfile</a></h1>
-<div class="section">
-<h2><a id="id11" name="id11">Synopsis</a></h2>
+<div class="section" id="setimageprofile">
+<h1><a class="toc-backref" href="#id19">SetImageProfile</a></h1>
+<div class="section" id="id11">
+<h2>Synopsis</h2>
 <pre class="literal-block">
-unsigned int SetImageProfile( <a class="reference" href="../api/types.html#image">Image</a> *image, const char *name, const unsigned char *profile,
+unsigned int SetImageProfile( <a class="reference external" href="../api/types.html#image">Image</a> *image, const char *name, const unsigned char *profile,
                               const size_t length );
 </pre>
 </div>
-<div class="section">
-<h2><a id="id12" name="id12">Description</a></h2>
+<div class="section" id="id12">
+<h2>Description</h2>
 <p>SetImageProfile adds a named profile to the image. If a profile with the
 same name already exists, then it is replaced. If a null profile address
 is supplied, then an existing profile is removed. The profile is copied
@@ -273,7 +274,7 @@ a profile, it may be necessary to remove both names in order for an
 &quot;IPTC&quot; profile to no longer be included in output file formats.</p>
 <p>The format of the SetImageProfile method is:</p>
 <pre class="literal-block">
-unsigned int SetImageProfile( <a class="reference" href="../api/types.html#image">Image</a> *image, const char *name, const unsigned char *profile,
+unsigned int SetImageProfile( <a class="reference external" href="../api/types.html#image">Image</a> *image, const char *name, const unsigned char *profile,
                               const size_t length );
 </pre>
 <dl class="docutils">
@@ -293,7 +294,7 @@ profile.</dd>
 </div>
 <div class="footer">
 <hr class="footer" />
-Generated on: 2009-08-27 23:30 UTC.
+Generated on: 2009-09-14 21:39 UTC.
 
 </div>
 </body>
